# sublib

./: .coverage  .gitignore  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  test_sublib.py  tox.ini
.github/workflows/: tests.yml
docs/: sublib-1.2.0-doc.md  sublib-1.2.1-doc.md
src/sublib/: sublib.py
sublib/: __init__.py  sublib.py
sublib/sublib/: __init__.py
sublib/tests/: test_sublib.py
tests/: test_detect.py  test_microdvd.py  test_mplayer2.py  test_subrip.py  test_subtitle.py  test_tmplayer.py
