[metadata]
name = sublib
version = 1.2.0
url = https://github.com/TheFifthLeaf/sublib
download_url = https://github.com/TheFifthLeaf/sublib/archive/refs/tags/v1.2.0.zip
project_urls =
    pypi = https://pypi.org/project/sublib/
author = Dawid Jach
author_email = jach.developer@protonmail.com
license = GNU GPLv3
license_files = LICENSE
description = Python library for easier management and processing of subtitle files.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, subtitle, sublib, subrip, microdvd, mplayer, mplayer2, tmplayer
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
python_requires = >= 3.6
include_package_data = True
packages = find:
